salesforce/force-app/main/default/objects/Campaign_Decode__c/Campaign_Decode__c.object-meta.xml
<CustomObject>
    <description>Decode table that maps UTM campaign parameter values to rich campaign context. Used by agents and Data Cloud to understand inferred interests, intent signals, audience profile, and targeting strategy behind each campaign touchpoint.</description>
    <label>Campaign Decode</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Decodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>