salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/Agent_Context_Summary__c.field-meta.xml
<CustomField>
    <fullName>Agent_Context_Summary__c</fullName>
    <description>Pre-written natural language summary for agents to understand the full campaign context — who the customer likely is, what they care about, and how to personalize the conversation</description>
    <label>Agent Context Summary</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>