salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/Audience_Data_Signals__c.field-meta.xml
<CustomField>
    <fullName>Audience_Data_Signals__c</fullName>
    <description>Semicolon-delimited data signals used for audience targeting (e.g. beauty purchase intent; skincare browser; lifestyle: wellness)</description>
    <label>Audience Data Signals</label>
    <length>500</length>
    <type>Text</type>
</CustomField>