salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/Audience_Segment__c.field-meta.xml
<CustomField>
    <fullName>Audience_Segment__c</fullName>
    <description>Merkury audience segment name this campaign targeted (e.g. Beauty Enthusiasts 25-40, Luxury Skincare Buyers)</description>
    <label>Audience Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>