salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/Campaign_Theme__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Theme__c</fullName>
    <description>High-level campaign theme slug (e.g. summer-glow, anti-aging, bridal-beauty)</description>
    <label>Campaign Theme</label>
    <length>100</length>
    <type>Text</type>
</CustomField>