salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/Creative_Description__c.field-meta.xml
<CustomField>
    <fullName>Creative_Description__c</fullName>
    <description>Full ad creative description text that provides campaign messaging context</description>
    <label>Creative Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>