salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/Creative_Headline__c.field-meta.xml
<CustomField>
    <fullName>Creative_Headline__c</fullName>
    <description>The ad creative headline the customer saw (e.g. Your Summer Glow Starts Here)</description>
    <label>Creative Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>