salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/Inferred_Intent_Signals__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Intent_Signals__c</fullName>
    <description>Semicolon-delimited intent signals inferred from campaign context (e.g. discovery; seasonal purchase; mid-funnel consideration)</description>
    <label>Inferred Intent Signals</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>