salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/Inferred_Interests__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Interests__c</fullName>
    <description>Semicolon-delimited product interests inferred from the campaign creative and audience (e.g. skincare; serums; radiance; summer beauty)</description>
    <label>Inferred Interests</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>