salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Media platform where this campaign runs (e.g. Instagram, YouTube, TikTok, Pinterest, Hulu, Google Display, Email)</description>
    <label>Platform</label>
    <length>100</length>
    <type>Text</type>
</CustomField>