salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/Targeting_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Strategy__c</fullName>
    <description>How the audience was targeted (e.g. interest-based, lookalike, retargeting, demographic, contextual, first-party, household)</description>
    <label>Targeting Strategy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>