salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <description>The utm_campaign parameter value this decode record maps from (e.g. summer-glow-2026)</description>
    <externalId>true</externalId>
    <label>UTM Campaign</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>