salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <description>Media channel type (e.g. paid_social, video, display, ctv, crm)</description>
    <label>UTM Medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>