salesforce/force-app/main/default/objects/Campaign_Decode__c/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <description>Primary traffic source for this campaign (e.g. instagram, youtube, google)</description>
    <label>UTM Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>